--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body{
 }
 canvas{
     display: block;
+    opacity: 0.1;
 }
 .cover{
     height: 100vh;
@@ -30,4 +31,23 @@ div{
     height: 100vh;
     width: 100%;
     background-color: transparent;
+}
+.toggle{
+    color: #ffffff;
+    background-color: #eea45a;
+    height: 50px;
+    width: 150px;
+    border-radius: 10px;
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    text-transform: capitalize;
+    cursor: pointer;
 }
